plugins {
	id 'java'
	id 'war'
	id 'checkstyle'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.dddjava.jig-gradle-plugin' version '2026.5.4'
}

checkstyle {
	toolVersion = '10.21.4'
	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

checkstyleTest.enabled = false

group = 'com.official'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.modulith:spring-modulith-bom:2.0.6'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation:4.0.6'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc:4.0.6'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'
	implementation 'org.springframework.boot:spring-boot-starter-security:4.0.6'
	implementation 'org.modelmapper:modelmapper:3.2.6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-scalar:3.0.3'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	compileOnly 'org.projectlombok:lombok:1.18.42'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:4.0.6'
	runtimeOnly 'org.postgresql:postgresql:42.7.11'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'
	providedRuntime 'org.apache.tomcat.embed:tomcat-embed-core:11.0.21'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:4.0.6'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test:4.0.6'
	testImplementation 'org.springframework.boot:spring-boot-jdbc-test:4.0.6'
	testImplementation 'org.springframework.security:spring-security-test:7.0.5'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'
	testImplementation 'org.junit.jupiter:junit-jupiter:6.0.3'
	testImplementation 'org.mockito:mockito-core:5.20.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.20.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.3'
	testImplementation 'org.springframework.modulith:spring-modulith-docs'
}

tasks.named('test') {
	useJUnitPlatform()
	exclude '**/*IntegrationTest*'
	exclude '**/mapper/*Test*'
	exclude '**/ModulithDocumentationTest*'
}

tasks.register('integrationTest', Test) {
	description = '統合テストのみを実行する'
	group = 'verification'
	useJUnitPlatform()
	include '**/*IntegrationTest*'
	include '**/mapper/*Test*'
}

tasks.register('allTest', Test) {
	description = '単体テストと統合テストをすべて実行する'
	group = 'verification'
	useJUnitPlatform()
	exclude '**/ModulithDocumentationTest*'
}

tasks.register('generateModulithDocs', Test) {
	description = 'Spring Modulithのドキュメントを生成する'
	group = 'documentation'
	useJUnitPlatform()
	include '**/ModulithDocumentationTest*'
}

jig {
	modelPattern = 'com\\.web\\.gallery\\..*'
}

tasks.named('jigReports') {
	dependsOn 'classes'
}
